# a2ui-agui-demo

./: .gitignore  Makefile  README.md  a2ui-agui.code-workspace  flow.md
agent_shared_backend/: .env.example  README.md  pyproject.toml
agent_shared_backend/src/: app.py
agent_shared_backend/src/agents/llm_clients/: factory.py  schemas.py
agent_shared_backend/src/agents/travel_planner/: agent.py  state.py
agent_shared_backend/src/agents/travel_planner/prompts/: __init__.py  loader.py  system.j2
agent_shared_backend/src/agents/travel_planner/tools/: __init__.py  budget_validate_policy.py  calendar_check_availability.py  definitions.py  hotel_search_options.py  policy_check_travel_rules.py  schemas.py
agent_shared_backend/src/api/: dependencies.py  endpoints.py  router.py  schemas.py
agent_shared_backend/src/observability/: __init__.py  flow_logger.py
agent_shared_backend/src/settings/: __init__.py  app.py  llm.py
copilotkit_agui/: .env.example  README.md  components.json  instruction.md  package.json  scenario.md  tech.md
copilotkit_agui/src/app/: globals.css  layout.tsx  page.tsx
copilotkit_agui/src/app/business-trip/: layout.tsx  page.tsx
copilotkit_agui/src/business-trip/: actions.ts  routes.ts  state.ts  tools.tsx
copilotkit_agui/src/ui/primitives/: alert.tsx  badge.tsx  button.tsx  card.tsx  empty.tsx  progress.tsx  (+6 more)
docs/: jun9_a2ui_agui_project_explainer.docx
eraser_diagrams/: full-request-flow.eraser  runtime-boundary.eraser  shared-state-lifecycle.eraser  stage-state-flow.eraser  tool-entry-points.eraser  ui-component-action-flow.eraser
(+28 files in other folders)
