[project]
name = "a2ui-agui-agent-shared-backend"
version = "0.1.0"
description = "Pydantic AI FastAPI backend for a CopilotKit AG-UI / A2UI demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "pydantic-ai-slim[ag-ui,openrouter]>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
